--- a/d/details.html
+++ b/d/details.html
@@ -227,7 +227,7 @@
             
         </div>
     </body>
-    <script src="details.js">
+    <script src="./details.js">
 
     </script>
 </html>
