--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-
+localStorage.setItem('cart',JSON.stringify([]));
 var men=[
             {category:"men",
              name:"Jet Black Half Sleeve T-Shirt",
