--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <script>
 localStorage.setItem('cart',JSON.stringify([]));
+localStorage.setItem('sign',JSON.stringify([]));
+localStorage.setItem('see',JSON.stringify([]));
+localStorage.setItem('login',JSON.stringify([]));
 var men=[
             {category:"men",
              name:"Jet Black Half Sleeve T-Shirt",
