--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ localStorage.setItem('cart',JSON.stringify([]));
 localStorage.setItem('sign',JSON.stringify([]));
 localStorage.setItem('see',JSON.stringify([]));
 localStorage.setItem('login',JSON.stringify([]));
+localStorage.setItem('add',JSON.stringify([]));
 var men=[
             {category:"men",
              name:"Jet Black Half Sleeve T-Shirt",
